PFP-6376 send ProsessTaskEvent når task er ferdig slik at fagsak_prosess_task kan observere og slette rader